wpesrc: Doesn't work with fakevideosink
** (gst-launch-1.0:27757): CRITICAL **: 14:36:32.296: gst_gl_base_memory_alloc: assertion 'GST_IS_GL_BASE_MEMORY_ALLOCATOR (allocator)' failed
Thread 3 "wpesrc0:src" received signal SIGTRAP, Trace/breakpoint trap.
[Switching to Thread 0x7fffeb342700 (LWP 27820)]
0x00007ffff7d68885 in _g_log_abort (breakpoint=1) at ../../../glib/gmessages.c:554
554 ../../../glib/gmessages.c: No such file or directory.
(gdb) bt
#0 0x00007ffff7d68885 in _g_log_abort (breakpoint=1) at ../../../glib/gmessages.c:554
#1 0x00007ffff7d69b8d in g_logv (log_domain=0x0, log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=args@entry=0x7fffeb341af0) at ../../../glib/gmessages.c:1371
#2 0x00007ffff7d69d5f in g_log (log_domain=log_domain@entry=0x0, log_level=log_level@entry=G_LOG_LEVEL_CRITICAL, format=format@entry=0x7ffff7db957c "%s: assertion '%s' failed")
at ../../../glib/gmessages.c:1413
#3 0x00007ffff7d6a559 in g_return_if_fail_warning
(log_domain=log_domain@entry=0x0, pretty_function=pretty_function@entry=0x7ffff718b4e0 <__func__.25340> "gst_gl_base_memory_alloc", expression=expression@entry=0x7ffff718b4a8 "GST_IS_GL_BASE_MEMORY_ALLOCATOR (allocator)") at ../../../glib/gmessages.c:2767
#4 0x00007ffff7155e14 in gst_gl_base_memory_alloc (allocator=0x0, params=0x7fffdc013650) at ../subprojects/gst-plugins-base/gst-libs/gst/gl/gstglbasememory.c:761
#5 0x00007ffff716918b in gst_gl_memory_setup_buffer
(allocator=<optimized out>, buffer=0x555555851900, params=params@entry=0x7fffdc013650, tex_formats=tex_formats@entry=0x7fffeb341c64, wrapped_data=wrapped_data@entry=0x7fffeb341c68, n_wrapped_pointers=n_wrapped_pointers@entry=1) at ../subprojects/gst-plugins-base/gst-libs/gst/gl/gstglmemory.c:1494
#6 0x00007ffff7e77ad2 in gst_wpe_src_create(GstPushSrc*, GstBuffer**) (psrc=<optimized out>, buffer=0x7fffeb341d20) at ../subprojects/gst-plugins-bad/ext/wpe/gstwpesrc.cpp:147
#7 0x00007ffff71ef8c9 in gst_base_src_get_range (src=src@entry=0x55555581b450 [GstWpeSrc], offset=offset@entry=18446744073709551615, length=<optimized out>, buf=buf@entry=0x7fffeb341df8)
at ../subprojects/gstreamer/libs/gst/base/gstbasesrc.c:2527
#8 0x00007ffff71f1964 in gst_base_src_loop (pad=0x55555581c080 [GstPad]) at ../subprojects/gstreamer/libs/gst/base/gstbasesrc.c:2851
#9 0x00007ffff7f33d01 in gst_task_func (task=0x555555851050 [GstTask]) at ../subprojects/gstreamer/gst/gsttask.c:328
#10 0x00007ffff7d8c263 in g_thread_pool_thread_proxy (data=<optimized out>) at ../../../glib/gthreadpool.c:308
#11 0x00007ffff7d8b89d in g_thread_proxy (data=0x5555556f3370) at ../../../glib/gthread.c:805
#12 0x00007ffff7c9efa3 in start_thread (arg=<optimized out>) at pthread_create.c:486
#13 0x00007ffff7bcf4cf in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95